--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.6.9",
+    "moment": "^2.29.1",
     "next": "12.1.0",
+    "next-auth": "^4.3.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-toastify": "^8.2.0",
+    "react-transition-group": "^4.4.2",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.11.0",
